--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "lasty",
   "version": "1.0.0",
   "description": "LastFM and utility Discord bot",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
     "start": "nodemon"
   },
   "author": "dxnter",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "discord.js": "^11.4.2",
     "dotenv": "^6.0.0",
     "ms": "^2.1.1",
-    "nodemon": "^1.18.4",
-    "superagent": "^4.0.0-beta.5"
+    "nodemon": "^1.18.4"
   }
 }
