--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "discord.js": "^11.4.2",
     "dotenv": "^6.0.0",
+    "mongoose": "^5.3.1",
     "ms": "^2.1.1",
     "nodemon": "^1.18.4"
   }
