--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "chalk": "^2.4.1",
     "discord.js": "^11.4.2",
     "dotenv": "^6.0.0",
     "mongoose": "^5.3.1",
