--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^6.0.0",
     "mongoose": "^5.3.1",
     "ms": "^2.1.1",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "pluralize": "^7.0.0"
   }
 }
