--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^13.1.4",
     "axios": "^0.19.0",
     "chalk": "^3.0.0",
+    "cron": "^1.7.2",
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
