--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "git+https://github.com/dxnter/lasty.git"
   },
   "scripts": {
-    "start": "nodemon -r esm bot.js --ignore db.json",
+    "start": "node -r esm bot.js",
+    "dev": "nodemon -r esm bot.js --ignore db.json",
     "lint": "eslint --fix . && echo 'Lint complete.'"
   },
   "keywords": [
@@ -27,15 +28,13 @@
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
-    "lowdb": "^1.0.0",
-    "ms": "^2.1.2",
-    "nodemon": "^2.0.2",
-    "pluralize": "^8.0.0"
+    "lowdb": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "nodemon": "^2.0.4",
     "prettier": "^1.19.1"
   }
 }
