--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/node": "^13.13.24",
     "axios": "^0.19.2",
+    "canvas": "^2.6.1",
     "chalk": "^3.0.0",
     "cron": "^1.8.2",
     "dayjs": "^1.9.1",
