--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "url": "git+https://github.com/dxnter/lasty.git"
   },
   "scripts": {
-    "start": "node -r esm bot.js",
-    "dev": "nodemon -r esm bot.js --ignore db.json",
+    "start": "node -r esm src/bot.js",
+    "dev": "nodemon -r esm src/bot.js --ignore db.json",
     "lint": "eslint --fix . && echo 'Lint complete.'"
   },
   "keywords": [
