--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "bugs": "https://github.com/dxnter/lasty/issues",
   "scripts": {
-    "start": "NODE_ENV=production node -r esm src/bot.js",
-    "dev": "nodemon -r esm src/bot.js --ignore db.json",
+    "start": "NODE_ENV=production node -r esm src/index.js",
+    "dev": "nodemon -r esm src/index.js --ignore db.json",
     "lint": "eslint --fix . && echo 'Lint complete.'"
   },
   "keywords": [
@@ -28,6 +28,7 @@
     "cron": "^1.8.2",
     "dayjs": "^1.9.3",
     "discord.js": "^12.4.0",
+    "discord.js-commando": "git+https://github.com/discordjs/Commando.git",
     "esm": "^3.2.25",
     "lowdb": "^1.0.0"
   },
