--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lasty",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "A Discord bot for fetching Last.fm stats",
   "main": "bot.js",
   "repository": {
@@ -9,7 +9,7 @@
   },
   "bugs": "https://github.com/dxnter/lasty/issues",
   "scripts": {
-    "start": "NODE_ENV=production node -r esm src/index.js",
+    "start": "cross-env NODE_ENV=production node -r esm src/index.js",
     "dev": "nodemon -r esm src/index.js --ignore db.json",
     "lint": "eslint --fix . && echo 'Lint complete.'"
   },
@@ -33,6 +33,7 @@
     "lowdb": "^1.0.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-prettier": "^3.1.4",
