--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,27 @@
 {
-  "env": {
-    "browser": true,
-    "commonjs": true,
-    "es6": true,
-    "node": true
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module"
   },
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "extends": [
     "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
   ],
-  "parserOptions": {
-    "sourceType": "module",
-    "ecmaVersion": 2018
+  "env": {
+    "commonjs": true,
+    "es6": true,
+    "es2020": true,
+    "node": true
   },
   "rules": {
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
+    "@typescript-eslint/no-non-null-assertion": [
+      "off"
+    ]
   }
 }
