--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=production npm run prepare && node dist/src/index.js",
-    "dev": "ts-node-dev --respawn --watch src src/index.ts",
     "clean": "shx rm -rf dist/",
-    "compile": "tsc || true",
+    "compile": "tsc || exit 0",
     "prepare": "npm run clean && npm run compile"
   },
   "keywords": [
@@ -25,10 +24,6 @@
     "TypeScript",
     "lastfm"
   ],
-  "engines": {
-    "node": ">=11",
-    "npm": ">=6"
-  },
   "author": "Danny <contact@danfoster.io> (https://danny.sh)",
   "license": "GPL-3.0",
   "dependencies": {
@@ -58,5 +53,8 @@
     "prettier": "^1.19.1",
     "prettier-eslint": "^11.0.0",
     "shx": "^0.3.3"
+  },
+  "peerDependencies": {
+    "tslib": "^2.0.3"
   }
 }
